static/css/pages/beatmapset.css
html,
body {
  min-height: 100vh;
}
.container,
#app,
.main-banner {
  height: fit-content;
}

:root {
  --cool-border: 1px solid rgba(255, 255, 255, 0.4);
}

.main-banner {
  border-top-left-radius: 16px;
  border-top-right-radius: 16px;

  padding: 0;
  position: relative;
  overflow-y: auto;
}

.main-block {
  border-bottom-left-radius: 16px;
  border-bottom-right-radius: 16px;
}

.not-exist {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-height: 30vh;

  background: linear-gradient(
    45deg,
    rgb(145, 92, 92) 0%,
    rgb(172, 33, 33) 100%
  );
  font-size: 3em;
  width: 100%;
}
.not-exist-desc {
  font-size: 0.5em;
}

.image-banner {
  border-top-left-radius: 16px;
  border-top-right-radius: 16px;
  width: 100%;
  height: 60vh;
  max-height: 450px;
}

.banner-overlay {
  backdrop-filter: blur(0.1rem);
  background: linear-gradient(
    to bottom,
    rgba(20, 20, 20, 1) 0%,
    rgba(20, 20, 20, 0.2) 50%,
    rgba(20, 20, 20, 1) 100%
  );

  display: flex;
  flex-direction: row;

  gap: 0.25rem;

  position: absolute;

  width: 100%;
  height: 100%;
  max-height: 450px;

  z-index: 10;

  border-top-left-radius: 16px;
  border-top-right-radius: 16px;

  padding: 1rem;
}

.banner-overlay > section {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.map-metadata {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.map-title {
  font-size: 3em;
}

.map-creator {
  color: rgb(206, 206, 206);
  margin-top: auto;
}

.music-author,
.map-diff {
  font-size: 1.5em;
}

.map-parameters {
  font-size: 1.25em;
}

.map-buttons {
  display: flex;
  gap: 1rem;

  margin-top: 2rem;
  margin-bottom: 1rem;
}

.map-button {
  background-color: rgb(50, 50, 50);
  border-radius: 0.5rem;
  color: white;
  padding: 1rem;

  border: none;
  outline: 0;

  transition: outline 75ms;
}
.map-button:hover:enabled {
  cursor: pointer;
  background-color: rgb(64, 64, 64);
}
.map-button.ranked {
  background-color: rgb(13, 160, 50);
}
.map-button.loved {
  background-color: rgb(186 36 128);
}

.diff-select-section {
  margin-left: auto;
  text-align: center;
  min-width: 30%;

  display: flex;
  flex-direction: column;
  align-items: flex-end;
}

.diff-container {
  text-align: left;

  display: flex;
  flex-direction: column;

  width: fit-content;

  overflow-y: auto;

  padding: 1rem;
  gap: 0.5rem;
}

.diff {
  width: fit-content;
  border-radius: 0.5rem;
  width: 100%;
}

.star-rating {
  color: rgb(255, 213, 98);
  transition: color 75ms;
  font-size: 1.1em;
}

.diff-button {
  border-radius: 8px;
  display: flex;
  align-items: center;
  padding: 0.5rem;
  gap: 0.5rem;

  transition: background-color 75ms, color 75ms;
}
.diff-button:hover,
.diff-button.selected {
  background-color: white;
  color: black;
  cursor: pointer;
}
.diff-button:hover > .star-rating,
.diff-button.selected > .star-rating {
  color: rgb(159 126 33);
}

.modes-container {
  display: flex;
  margin-top: auto;

  justify-content: space-evenly;
  width: 100%;
}
.modes-button > .mode-icon {
  font-size: 2em;
  cursor: pointer;
}
.modes-button > .mode-icon::before {
  transition: color 75ms;
}
.modes-button > .mode-icon:hover::before,
.modes-button > .mode-icon.selected::before {
  color: rgb(42, 211, 253);
}
.modes-button > .mode-icon.converted::before {
  color: rgb(247, 171, 255);
}
.modes-button > .mode-icon.converted:hover::before,
.modes-button > .mode-icon.selected.converted::before {
  color: rgb(237, 79, 255);
}

/* Scores */
.main-block {
  /* border: var(--cool-border); */
  background-color: rgb(20, 20, 20);
}
.scores-tab {
  position: relative;

  display: flex;
  flex-direction: column;

  gap: 1rem;
  padding: 2rem;
  text-align: center;
  font-size: 2em;
}

.scores {
  position: relative;
  display: flex;
  flex-direction: column;

  gap: 1rem;
}

.loading-text {
  display: flex;
  justify-content: center;
  align-items: center;

  left: 0;
  top: 0;

  position: absolute;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  border-radius: 1rem;
}

.best-score-container {
  display: flex;
  align-items: center;

  height: 12rem;

  background-color: rgb(30, 30, 30);
  border-radius: 16px;

  padding: 1rem;

  font-size: 0.75em;

  gap: 2rem;
}

.best-score-position {
  display: flex;
  align-items: center;
  border-right: 1px solid rgba(255, 255, 255, 0.1);
  height: 100%;
  padding: 2rem;

  /* font-size: 1.5em; */
}
.best-score-grade {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  border-left: 1px solid rgba(255, 255, 255, 0.1);
  height: 100%;
  padding: 1rem;

  min-width: 8rem;

  font-size: 2.5em;

  margin-left: auto;
}

.best-score-mods {
  font-size: 0.35em;
}

.best-score-information {
  display: flex;
  flex-direction: column;

  align-items: flex-start;

  height: 100%;
}

.best-score-pfp {
  height: 100%;
  aspect-ratio: 1;
  border-radius: 8px;
}

.best-score-player {
  display: flex;
  align-items: center;
  gap: 0.5rem;

  font-size: 1.25em;
}
.best-score-score {
  font-size: 0.8em;
}
.best-score-pp,
.best-score-acc,
.best-score-combo,
.best-score.time {
  font-size: 0.6em;
}

.score-popup {
  position: absolute;
  bottom: 2.5rem;
  background-color: rgb(50, 50, 50);
  padding: 0.5rem;
  border-radius: 0.5rem;

  opacity: 0;
  transition: 75ms;
  pointer-events: none;
  color: white;
}

.best-score-score {
  position: relative;

  color: rgb(157, 211, 255);
  cursor: default;
  transition: 75ms;
}
.best-score-score:hover {
  color: rgb(238, 247, 255);
}
.best-score-score:hover > .score-popup {
  opacity: 1;
  z-index: 20;
}

.best-score-time {
  color: rgb(131, 131, 131);
  margin-top: auto;
  font-size: 0.6em;
}

.best-score-misc {
  padding: 1rem;
  display: flex;
  flex-direction: column;

  align-items: center;

  height: 100%;

  border-radius: 16px;

  margin-left: auto;
  margin-right: auto;
}

.score-params-grid {
  display: grid;
  align-items: center;
  justify-items: center;

  gap: 0.5rem;

  width: 100%;
  height: 100%;

  grid-template-columns: 1fr 1fr 1fr;
}

.score-params-value {
  display: flex;
  justify-content: center;
  align-items: center;

  font-size: 0.75em;
  border-radius: 4px;
  padding: 0.5rem;
  height: 100%;
  width: 100%;

  white-space: nowrap;
  /* min-width: 5rem; */
  background-color: rgb(60, 60, 60);
}

.best-score-300 {
  background-color: rgb(23 84 158);
}
.best-score-100 {
  background-color: rgb(38 145 21);
}
.best-score-50 {
  background-color: rgb(169 156 37);
}
.best-score-0 {
  background-color: rgb(171 49 33);
}

.scores-container {
  display: grid;
  grid-template-columns: 5rem 4rem 1fr 4rem 1fr 2fr 8rem 8rem 1fr 1fr;
  background-color: rgb(30, 30, 30);
  padding: 0.5rem;
  border-radius: 16px;

  font-size: 0.5em;
  overflow-x: auto;
}
.scores-container > .default-formatting {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0.5rem;
}

.leaderboard-title {
  padding: 0.25rem;
  margin: 0.75rem;
  border-radius: 10px;
}

.score-player-title {
  grid-column: 2 / 4;
}

.leaderboard-value {
  border-left: 1px solid rgba(255, 255, 255, 0.1);
  /* border-right: 1px solid rgba(255, 255, 255, 0.1); */
  padding: 0.6rem;
}
/* 
.score-mods, .score-player, .score-score {
  text-align: left;
  padding: 1rem;
} */

.score-score {
  position: relative;

  color: rgb(157, 211, 255);
  cursor: default;
  transition: 75ms;
}
.score-score:hover {
  color: rgb(238, 247, 255);
}
.score-score:hover > .score-popup {
  opacity: 1;
  z-index: 20;
}

.leaderboard-value.player-flag {
  height: 1rem;
  margin: 0;
}

.player-flag {
  margin-bottom: 0;
  margin-left: 0;
}

.score-combo.max-combo {
  color: rgb(166 237 182);
}

.extra-modes {
  display: flex;
  justify-content: center;

  gap: 2rem;
}

.extra-modes-button {
  font-size: 0.75em;
  background: none;
  outline: none;
  border: none;
  color: white;
  transition: color 75ms;
}
.extra-modes-button:enabled:hover,
.extra-modes-button.selected {
  color: rgb(42, 211, 253);
  cursor: pointer;
}
.extra-modes-button:disabled {
  color: rgb(255, 255, 255, 0.5);
}

.sortable-down {
  display: flex;

  justify-content: center;
  align-items: center;
  gap: 0.5rem;
  padding: 0 0.5rem;

  background-color: rgba(255, 255, 255, 0.075);
  cursor: pointer;
  transition: color 75ms;
}
.sortable-down.selected {
  cursor: default;
}
.sortable-down.selected.orderable {
  cursor: pointer;
}
.sortable-down.selected,
.sortable-down:hover {
  background-color: rgba(255, 255, 255, 0.17);
}
.sortable-down.selected:after {
  content: "";
  display: inline-block;

  width: 0;
  height: 0;
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;

  border-top: 5px solid white;
  transition: 75ms;
}
.sortable-down.selected.ascending:after {
  transform: rotate(180deg);
}

